fix: remove tooltip from dom tree while invisible

--- a/ui/src/style.scss
+++ b/ui/src/style.scss
@@ -68,11 +68,6 @@ svg {
   color: var(--text-color);
 }
 
-.tooltip-hidden {
-  visibility: hidden;
-  opacity: 0;
-}
-
 .node {
   cursor: pointer;
 }
